--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,50 @@
 /* Denna fil skall innehålla din CSS kod */
 @media only screen and (max-width: 600px) {
-#container {
+#mobil {
     display:grid;
-    height:100vh;
+   /* height:100vh;
     grid-gap: 10px;
     grid-template-rows: 100px 30px auto 150px;
-    grid-template-columns: 2fr 1fr 1fr 1fr;
+    grid-template-columns: 2fr 1fr 1fr 1fr;*/
+    height:100vh;
+    grid-template-columns: 2fr 1fr;
+    background-color: rgb(191, 231, 178) ;
+    grid-gap: 12px;
     grid-template-areas:
-   'hd hd hd hd'
-   'mn mn mn mn'
-   'as as as as'  
+   'th th'
+   'hd hd'
+   'nv nv'
+   'mn mn'
+   'as as'
+   'ft ft';
+    
 }
 
-#header {
-    grid-area: hd;
-    background-color: brown;
+header {
+    grid-area: hd; 
+    text-align: center;
+    font-size: 65px;
+    background-color: tomato;
+    height: 80px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-
-#nav {
-    grid-area: nv;
-    background-color: cornflowerblue;
+nav {
+    grid-area:nv;
+    background-color: blueviolet;
+    height:100px;
+    text-align: center;
 }
-
-#aside {
-    grid-area: as;
-    background-color: orangered;
+aside{
+    grid-area:as;
+    background-color: rgb(111, 92, 196);
 }
-
-#main {
-    grid-area: mn;
-    background-color: peru;
+main {
+    grid-area:mn;
+    background-color: yellow;
+    height: 500px;
 }
-
-#footer {
-    grid-area: ft;
-    background-color: silver;
+footer {
+    grid-area:ft;
+    background-color: lightsteelblue;
 }
 }
