--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,11 @@
     grid-template-columns: 2fr 1fr 1fr 1fr;*/
     height:100vh;
     grid-template-columns: 2fr 1fr;
-    background-color: rgb(191, 231, 178) ;
+    background-color: white ;
     grid-gap: 12px;
     grid-template-areas:
-   'th th'
-   'hd hd'
+   
+    'hd hd'
    'nv nv'
    'mn mn'
    'as as'
@@ -24,27 +24,31 @@ header {
     grid-area: hd; 
     text-align: center;
     font-size: 65px;
-    background-color: tomato;
+    background-color: rgb(191, 231, 178);
     height: 80px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 nav {
     grid-area:nv;
-    background-color: blueviolet;
+    background-color: rgb(191, 231, 178);
     height:100px;
     text-align: center;
 }
 aside{
     grid-area:as;
-    background-color: rgb(111, 92, 196);
+    background-color: rgb(191, 231, 178);
+    text-align:center ;
 }
 main {
     grid-area:mn;
-    background-color: yellow;
+    background-color: rgb(191, 231, 178);
     height: 500px;
+    text-align: center;
 }
 footer {
     grid-area:ft;
-    background-color: lightsteelblue;
+    background-color: rgb(191, 231, 178);
+    height: 200px;
+    text-align: center;
 }
 }
