--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
     grid-template-columns: 2fr 1fr;
     background-color: white ;
     /*grid-gap: 12px; */
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     grid-template-areas:
     
    
@@ -24,10 +25,11 @@
 body{
     display:flex;
     flex-direction: column;
-}
+} 
 
 img {
     margin:auto;
+    padding: 20px;
 }
 
 div-5 {
@@ -36,14 +38,13 @@ div-5 {
     font-size: 65px;
     background-color: rgb(191, 231, 178);
     height: 80px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 div-1 {
     grid-area:nv;
     background-color: rgb(191, 231, 178);
-    height:125px;
+    height: 130px;
     text-align: center;
-    text-decoration: brown;
+
 }
 
 #inner-grid {
@@ -66,7 +67,9 @@ div-2{
     background-color: rgb(191, 231, 178);
     text-align:center ;
     height: 50px;
+        
 }
+
 div-3 {
     grid-area:mn;
     background-color: rgb(191, 231, 178);
