--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body{
 
 img {
     margin:auto;
-    padding: 20px;
+    padding: px;
 }
 
 div-5 {
@@ -87,8 +87,28 @@ div-3 {
     height: 250px;
     text-align: center;
     border: solid white;
+    font-size: 19px;
 
 }
+
+#another-grid {
+    display:grid;
+    grid-template-columns: 1fr;
+    grid-gap: 5px;
+
+}
+
+#another-grid > div{
+    background-color: white;
+    padding: 5px;
+    border-radius: 10px;
+    width: 300px;
+    height: 200px;
+    margin: auto;
+    /*box-shadow: 2px 2px green; */
+    font-size: 14px;
+}
+
 div-4 {
     grid-area:ft;
     background-color: rgb(191, 231, 178);
