--- a/css/link1.css
+++ b/css/link1.css
@@ -28,6 +28,7 @@ body{
 img {
     margin:auto;
     padding: px;
+    
 }
 
 div-1 {
@@ -53,12 +54,12 @@ div-2 {
     grid-gap: 5px;
 }
 
-#ree >div{
+#reee >div{
     background-color: white;
     padding: 5px;
     border-radius: 10px;
-    width: 300px;
-    height: 200px;
+    width: 450px;
+    height: 210px;
     margin: auto;
     /*box-shadow: 2px 2px green; */
     font-size: 14px;
