--- a/css/link1.css
+++ b/css/link1.css
@@ -2,7 +2,7 @@
 
 #container {
     display:grid;
-     height:100vh;
+     height:200vh;
      grid-template-columns: 2fr 1fr;
      background-color: white ;
      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -40,7 +40,7 @@ div-10 {
 div-2 {
     grid-area:mn;
     background-color: rgb(191, 231, 178);
-    height: 600px;
+    height: 1900px;
     text-align: center;
     border: solid white;
     font-size: 19px;
@@ -63,16 +63,24 @@ div-2 {
     height: 90%;
     margin: auto;
     /*box-shadow: 2px 2px green; */
-    font-size: 12px;
+    font-size: 15px;
     text-align:left;
-    font-weight: bold;
+    color: black;
 
 }
 
 .p1 {
     color: #666666;
+    font-weight: bold;
 
 }
+
+/*.p2 {
+}*/
+
+/*.h1 {
+    font-weight: bold;
+}*/
 
 div-3 {
     grid-area: nv;
