--- a/css/link1.css
+++ b/css/link1.css
@@ -75,12 +75,31 @@ div-2 {
 
 }
 
-/*.p2 {
-}*/
-
-/*.h1 {
+.h1 {
     font-weight: bold;
-}*/
+}
+
+.h2 {
+    font-weight: bold;
+}
+
+.h3 {
+    font-weight: bold;
+
+}
+
+.h4 {
+    font-weight: bold;
+}
+
+.h5 {
+    font-weight: bold;
+}
+
+.p12 {
+     color: #666666;
+    font-weight: bold;
+}
 
 div-3 {
     grid-area: nv;
